# tagclass

./: .gitignore  LICENSE  README.md  pyproject.toml
data/malgenome/: malgenome-euphony-parsed.json  malgenome-nermnl.jsonl
script/: run_evaluate.sh
tagclass/: common.py  parser.py  tag.py  tokenizer.py  update.py  utils.py
tagclass/cli/: __init__.py  clean.py  evaluate.py  parse.py  prepare.py  update.py
tagclass/data/: family_voc.toml  init_locator.toml  init_misc.toml  locator_voc.toml  misc_voc.toml
tests/: test_parser.py  test_tag.py  test_tokenizer.py  test_update.py
tests/data/: testapiv2.json  testvoc.toml
